[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "emailstore"
version = "1.5.4.dev1"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Select and store emails from mailbox."
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
license = {file = "LICENCE"}
readme = "README"
dependencies = [
    "solentware-misc==1.6.dev1",
]

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/emailstore.git"
"Bug Tracker" = "https://github.com/RogerMarsh/emailstore/issues"

[tool.setuptools]
packages = [
    "emailstore",
    "emailstore.core",
    "emailstore.gui",
    "emailstore.help_",
]

[tool.setuptools.package-data]
emailstore = ["help_/*.txt"]
