[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "emailstore"
version = "1.5.8"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Select and store emails from mailbox."
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
license = "BSD-3-Clause"
license-files = ["LICENCE"]
readme = "README"
dependencies = [
    "solentware-misc==1.7.2",
]

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/emailstore.git"
"Bug Tracker" = "https://github.com/RogerMarsh/emailstore/issues"

[tool.setuptools]
packages = [
    "emailstore",
    "emailstore.core",
    "emailstore.gui",
    "emailstore.help_",
]

[tool.setuptools.package-data]
emailstore = ["help_/*.txt"]
