[metadata]
name = emailstore
version = 1.4.5
description = Select and store emails from mailbox
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Other/Nonlisted Topic
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    emailstore
    emailstore.core
    emailstore.gui
    emailstore.help
install_requires =
    solentware-misc==1.3.3

[options.package_data]
emailstore.help = *.txt
